Import wiredtiger-wiredtiger-2.8.0-449-gff108d7.tar.gz from wiredtiger branch mongodb-3.4

ref: 6f9a7a4..ff108d7

SERVER-24306  40-second journaling stall from "log files prepared" to checkpoint
WT-2268       JSON load incorrect with UNICODE input
WT-2597       JSON dump needs LSM tests
WT-2673       Stop automatically increasing memory page max
WT-2674       simplify metadata file check
SERVER-24151  WiredTiger changes for MongoDB 3.3.7